# PCI-DSS-PDF-Control-Tree-Parser

./: .gitignore  AI_ASSISTANT_TEMPLATE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEV_WORKFLOW.md  README.md  README_TEMPLATE.md  SECURITY_STANDARDS.md  pci_dss_parser.py  pyproject.toml  rebuild.sh  requirements.txt  temp-to-be-parsed-2.md  temp-to-be-parsed.md
PCI-DSS-PDF-Control-Tree-Parser-full/: .gitignore  CONTRIBUTING.md
docs/: AI_ASSISTANT.md  ARCHITECTURE.md  README_TEMPLATE.md  SECURITY_STANDARDS.md
examples/: notion_export.py
scripts/: run_parser.sh
src/pci_dss_pdf_control_tree_parser/: __init__.py  pci_dss_parser.py
tests/: test_parser_basic.py
